--- a/css/styles.css
+++ b/css/styles.css
@@ -72,12 +72,19 @@ header h1 {
 }
 
 #briefHistory {
-	background-color: snow;
-	border: 2px;
-	box-shadow: 6px 6px 6px 6px black;
-	width: 50%;
-	margin-left: 25%;
-	color: #212f3d;
+  /*background-color: azure;*/
+  /*border: 2px;*/
+ box-shadow: 6px 6px 6px 6px black;
+  width: 50%;
+  margin-left: 25%;
+  color: #212f3d;
+  
+  border-style: solid;
+  border-width: 28px 29px 27px 28px;
+  -moz-border-image: url(../images/border1.png) 28 29 27 28 repeat;
+  -webkit-border-image: url(../images/border1.png) 28 29 27 28 repeat;
+  -o-border-image: url(../images/border1.png) 28 29 27 28 repeat;
+  border-image: url(../images/border1.png) 28 29 27 28 fill repeat;
 }
 
 #briefHistory h2 {
