--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,39 @@ header h1 {
 	float: left;
 }
 
+/* add title and font shadow effect */
+#slidertitle {
+  font-family: 'Pacifico', cursive;
+  font-size: 2em;
+  color: #064dce;
+  text-align: center;
+  color: #073471;
+  text-shadow: #1385d9 0 -4px 4px, #d86219 0 -7px 7px, #59e526 0 -10px 10px, #0f64ad 0 -8px 8px;
+}
+
+/* add some splash effects */
+#slidertitle span {
+  display: inline-block;
+  transform: scale(1, 3);
+  -webkit-transform: scale(3, 2);
+}
+
+/* holds the bxslider, put custom border */
+#slidercontainer {
+  border-style: solid;
+  border-width: 18px 18px 18px 18px;
+  -moz-border-image: url(../images/newborder1.png) 28 29 27 28 repeat;
+  -webkit-border-image: url(../newimages/border1.png) 28 29 27 28 repeat;
+  -o-border-image: url(../images/newborder1.png) 28 29 27 28 repeat;
+  border-image: url(../images/newborder1.png) 28 29 27 28 fill repeat;
+  box-shadow: 6px 6px 6px 6px black;
+  width: 850px;
+  margin: -120px 0px 20px 0px;
+  width: 50%;
+  margin-left: 26%;
+}
+
+
 /* Home page styles */
 
 #personal p {
@@ -72,19 +105,17 @@ header h1 {
 }
 
 #briefHistory {
-  /*background-color: azure;*/
-  /*border: 2px;*/
- box-shadow: 6px 6px 6px 6px black;
+  box-shadow: 6px 6px 6px 6px black;
   width: 50%;
   margin-left: 25%;
   color: #212f3d;
   
   border-style: solid;
   border-width: 28px 29px 27px 28px;
-  -moz-border-image: url(../images/border1.png) 28 29 27 28 repeat;
-  -webkit-border-image: url(../images/border1.png) 28 29 27 28 repeat;
-  -o-border-image: url(../images/border1.png) 28 29 27 28 repeat;
-  border-image: url(../images/border1.png) 28 29 27 28 fill repeat;
+  -moz-border-image: url(../images/newborder1.png) 28 29 27 28 repeat;
+  -webkit-border-image: url(../images/newborder1.png) 28 29 27 28 repeat;
+  -o-border-image: url(../images/newborder1.png) 28 29 27 28 repeat;
+  border-image: url(../images/newborder1.png) 28 29 27 28 fill repeat;
 }
 
 #briefHistory h2 {
